--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Super-M5-Bro/IOT-Project#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite3": "^4.1.0"
   }
 }
